<resources>
    <string name="app_name">Healthy lifestyle</string>
    <string name="nama_hari">Minggu 09 Oktober 2023</string>
    <string name="hallo_hai">Hallo,Bambang!</string>
    <string name="daily_yo">Daily Activity</string>
    <string name="cegah_stunting">Cegah Stunting, PNM Gelar Penyuluhan Edukasi Gizi pada Ibu Nasabah PNM</string>
    <string name="kebiasaan_P">6 Kebiasaan Pagi yang Bisa Mengurangi Stres, yuk Praktikkan!</string>
</resources>